--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ aboutme: Hi, I'm Vinoth. Programmer, Software consultant, Indie hacker.
 
 ### Site setting:
 ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
-default_column: "one" # blog style: two columns, if default_column != "two", you will see a one column blog.
+default_column: "two" # blog style: two columns, if default_column != "two", you will see a one column blog.
 default_locale: "en" # blog sidebar language set, only include: English (en), Chinese (cn), Japanese (jp), Polish (pl), Korean (kr),  Russian (ru), Turkish (tr), and Indonesian (id).
 
 locales:
@@ -30,6 +30,7 @@ locales:
       Categories: "Categories"
       Copyright_Notice: "Copyright Notice"
       Recent_Posts: "Recent Posts"
+      About: "Links"
       Tags: "Tags"
       Previous: "Older"
       Next: "Newer"
